# sim

./: .gitignore  LICENSE  README.md  SECURITY.md  SIM_constitution.txt  pyproject.toml
.github/workflows/: test.yml
docs/: ROADMAP.md
examples/: k1_server_manifest.yaml  sim-observe.service  sim-observe.timer
examples/k1/: README.md  apply_alpha_fixes.py  bootstrap_alpha.sh  finish_bootstrap.sh  run_overlay_tests.sh
sim/: __init__.py  __main__.py  config.py  inventory.py  logger.py  main.py  orchestrator.py  report.py  state.py  subprocess_util.py  ui.py
sim/checks/: __init__.py  phase0.py
sim/ire/: __init__.py  desired.py  drift.py  engine.py  metrics.py  models.py  observed.py  safety.py  transaction.py
sim/ire/modules/: __init__.py  firewall.py  (+3 more)
sim/k1/: __init__.py  preflight.py
sim/modules/: __init__.py  base.py  cuda.py  dependencies.py  gpu_util.py  init_environment.py  nvidia_container.py  nvidia_driver.py  podman_runtime.py  python_runtime.py  quadlet.py  registry.py  rollback_util.py
sim/phases/: __init__.py  lifecycle.py  phase1_ports.py
tests/: test_config.py  test_dependencies.py  test_gpu_modules.py  test_inventory.py  test_ire.py  test_ire_chaos.py  test_ire_chaos_scenarios.py  test_ire_metrics.py  test_ire_modules.py  test_ire_observed.py  test_ire_storage.py  test_ire_tailscale.py  test_ire_transactions.py  test_k1_preflight.py  test_module_rollback.py  test_modules.py  test_orchestrator.py  test_phase1_ports.py  test_phase_lifecycle.py  test_podman_runtime.py  test_python_runtime.py  test_quadlet.py  test_registry.py  test_state.py
