[project]
name = "sim"
version = "0.1.0"
description = "Shembazaï Infrastructure Manager - deterministic, idempotent provisioning for Rocky Linux 10 hosts"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [ { name = "Shembazaï" } ]
urls = { Repository = "https://github.com/shembazai/sim", Documentation = "https://github.com/shembazai/sim#readme" }
dependencies = [
    "typer>=0.15",
    "rich>=13.7",
    "pydantic>=2.6",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sim = "sim.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sim*"]
